tests/snapshots/examples_fixtures/functions__immutability_valid.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/functions/immutability_valid.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E001]: DUPLICATE NAME

Duplicate binding: `counter` is already defined.

  --> examples/functions/immutability_valid.flx:16:9
   |
16 |         let counter = n + 1;
   |         ^^^^^^^^^^^^^^^^^^^^

Hint:
  Use a different name or remove the previous definition.

   = note: first defined here
  --> examples/functions/immutability_valid.flx:13:5
   |
13 |     let counter = 0;
   |     ^^^^^^^^^^^^^^^^
== stdout ==
<not executed>
